# connectiva

./: README.md  pyproject.toml
.github/workflows/: base.yml  test-file.yml  test-kafka.yml  test-rabbitmq.yml  test-websocket.yml
connectiva/: __init__.py  communication_factory.py  connectiva.py  interfaces.py  logging_config.py  message.py  protocol_detector.py
connectiva/protocols/: AMQP_protocol.py  __init__.py  amqp_protocol.py  broker_protocol.py  file_protocol.py  graphql_protocol.py  grpc_protocol.py  kafka_protocol.py  rest_protocol.py  websocket_protocol.py
docker/: docker-compose.kafka.yml  docker-compose.rabbitmq.yml
tests/: test_amqp_protocol.py  test_file_protocol.py  test_kafka_protocol.py  test_websocket_protocol.py
