[tool.poetry]
name = "connectiva"
version = "0.1.0"
description = "A Unified Microservice Communication Library"
authors = ["Ali Tavallaie <a.tavallaie@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["microservices", "communication", "REST", "gRPC", "Kafka", "WebSockets", "GraphQL"]

[tool.poetry.dependencies]
python = ">=3.8.1"
requests = "^2.32.3"
grpcio = "^1.65.4"
pika = "^1.3.2"
websockets = "^12.0"
kafka-python-ng = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
black = "^24.8.0"
flake8 = "^7.1.0"
nest-asyncio = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
